--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.5.0",
     "botkit": "^0.5.7",
     "request": "^2.81.0",
     "uuid": "^3.1.0"
